--- a/app/views/to_dos/new.html.erb
+++ b/app/views/to_dos/new.html.erb
@@ -2,7 +2,14 @@
 
 <% form_for(@to_do) do |f| %>
   <%= f.error_messages %>
-
+<p>
+	<%= f.label :description %> <br />
+	<%= f.text_field :description %>
+</p>
+<p>
+	<%= f.label :due_on %><br />
+	<%= f.text_field :due_on %>
+</p>
   <p>
     <%= f.submit 'Create' %>
   </p>
